fixed the mobile header so its z-index was -1 until active

--- a/wp-content/themes/peacebone/sass/partials/components/_header.scss
+++ b/wp-content/themes/peacebone/sass/partials/components/_header.scss
@@ -10,14 +10,20 @@
   top: 0;
   transition: background-color 250ms ease-out;
   width: 100%;
-  z-index: 9;
+  z-index: -1;
 
   &.is-active {
     background-color: rgba(0,0,0,0.85);
+    z-index: 9;
   }
 
   @include breakpoint($mobile-bp) {
     height: 80px;
     background-color: transparent;
+    z-index: 9;
+
+    &.is-active {
+      background-color: transparent;
+    }
   }
 }
